--- a/10bolum1.tex
+++ b/10bolum1.tex
@@ -12,11 +12,11 @@ Multiplo platformlarda düzenlenmiþtir. Platform, yaygýn robotik sorunlarý çözmek
 \textbf{Mekanik}: ABS, akrilik ve fablabuyumlu olarak kolayca özelleþtirilebilir diðer malzemelere dayalý\\
 \textbf{Belgeler}: LibreOffice gibi Açýk Kaynak biçimlerinde yayýmlanýr\\
 
-Multiplo robotlar Kaliforniya'da Teknoloji Müzesi'nde sergileniyor.  Konsepti baþlangýçta Julian da Silva ve bazý iþbirlikçileri tarafýndan tasarlanmýþtýr, daha sonra þirket tarafýndan benimsenmiþtir. Rodolfo Cossovich tarafýndan bir robot kitine dönüþtürüldükten sonra nihayet kitlesel fonlama kampanyasýyla kitlesel fonlama yapýldý.
+Multiplo robotlar Kaliforniya'da Teknoloji Müzesi'nde sergileniyor.  Konsepti baþlangýçta Julian da Silva ve bazý iþbirlikçileri tarafýndan tasarlanmýþtýr, daha sonra þirket tarafýndan benimsenmiþtir. Rodolfo Cossovich tarafýndan bir robot kitine dönüþtürüldükten sonra nihayet kitlesel fonlama kampanyasýyla kitlesel fonlama yapýldý.\cite{k:1}
 \subsection{miniBloq}
 MiniBloq, Arduino, Multiplo, fiziksel bilgi iþlem cihazlarý ve robotlar için grafiksel bir programlama ortamýdýr. 
 
-Temel hedeflerinden biri, oðrenciler ve yeni baþlayanlara fiziksel bilgi iþlem ve robotik platformlarý daha da yakýnlaþtýrmaktýr.
+Temel hedeflerinden biri, oðrenciler ve yeni baþlayanlara fiziksel bilgi iþlem ve robotik platformlarý daha da yakýnlaþtýrmaktýr.\cite{k:2}
 
 \begin{table}[h!]
 \centering
