--- a/12sonuclar.tex
+++ b/12sonuclar.tex
@@ -1,1 +1,29 @@
+\begin{figure}[h!]
+     \centering
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{robot}
+         \caption*{ Robot}
+         \label{fig:robot}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{jumper}
+         \caption*{ 4 Adet Erkek-Diþi Jumper}
+         \label{fig:kumanda}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{sens}
+         \caption*{ Kablo}
+         \label{fig:cable}
+     \end{subfigure}
+      \caption{Ýkinci uygulamada kullandýðýmýz malzemeler}
+\end{figure}
+
 \section{SONUÇLAR VE ÖNERÝLER}
+Günümüzde robotik sektörü büyük bir hýzla büyüyor. Bu nedenle bu projenin önemi, öðrencileri bu sektöre temel bilgilerle tanýþtýrarak bu sektörde güncel olabilmelerini saðlamaktýr.
+
+Bu projede yaptýðýmýz uygulamalar çok esnektir ve öðrencilere deðiþiklik yapma esnekliði verir ve istedikleri algoritmayý uygulayabilirler.
