--- a/15ozgecmis.tex
+++ b/15ozgecmis.tex
@@ -5,28 +5,29 @@
 \renewcommand{\arraystretch}{1.5}
 \begin{tabular}{l@{\bf :}l}
 \multicolumn{2}{l}{\underline{\bf KÝÞÝSEL BÝLGÝLER}}\cr
-\textbf{Adý Soyadý}&     \cr
-\textbf{Uyruðu}&\;  \cr
-\textbf{Doðum Yeri ve Tarihi}&\;     \cr
-\textbf{Adres}&\;      \cr
+\textbf{Adý Soyadý}&   IBRAHIM KHALIL ATTEIB YACOUB  \cr
+\textbf{Uyruðu}&\; ÇAD \cr
+\textbf{Doðum Yeri ve Tarihi}&\;    03.03.1998\cr
+\textbf{Adres}&\;   Bilecik/Türkiye   \cr
 \multicolumn{1}{l}{}&      \cr
-\textbf{Telefon}&\;     \cr
-\textbf{e-mail}&\;   \cr
+\textbf{Telefon}&\;  5433044170   \cr
+\textbf{e-mail}&\; ibrahimalkhalilatteib@gmail.com  \cr
 \multicolumn{1}{l}{}&\cr
 \multicolumn{2}{l}{\underline{\bf EÐÝTÝM DURUMU}}\cr
 \textbf{Lisans Öðrenimi}&\; BÞEÜ Bilgisayar Mühendisliði Bölümü\cr
-\textbf{Bitirme Yýlý}&\;    \cr
-\textbf{Lise}& \;    \cr
+\textbf{Bitirme Yýlý}&\;  2023  \cr
+\textbf{Lise}& \; Kuveyt merkez lisesi   \cr
 \multicolumn{1}{l}{}&\cr
 \multicolumn{2}{l}{\underline{\bf ÝÞ DENEYÝMLERÝ}}\cr
-\textbf{Yýl}&\;     \cr
-\textbf{Kurum}& \;    \cr
-\textbf{Stajlar}&\;     \cr
+\textbf{Yýl}&\;  -   \cr
+\textbf{Kurum}& \;  -  \cr
+\textbf{Stajlar}&\;  -   \cr
 \multicolumn{1}{l}{}&\cr
-\multicolumn{2}{l}{\underline{\bf ÝLGÝ ALANLARI:}}\cr
+\multicolumn{2}{l}{\underline{\bf ÝLGÝ ALANLARI:}}Yapay Zeka, Web Uygulama (Laravel)\cr
 \multicolumn{1}{l}{}&\cr
-\multicolumn{2}{l}{\underline{\bf YABANCI DÝLLER:}}\cr
+\multicolumn{2}{l}{\underline{\bf YABANCI DÝLLER:}}Fransizca, Arapça, Ýngilizce(baþlangýç)\cr
 \multicolumn{1}{l}{}&\cr
-\multicolumn{2}{l}{\underline{\bf BELÝRTMEK ÝSTEDÝÐÝNÝZ DÝÐER ÖZELLÝKLER:}}
+
+
 \end{tabular}}
 \end{table}
