--- a/3ozetabstract.tex
+++ b/3ozetabstract.tex
@@ -3,20 +3,18 @@
 \begin{center}
 \textbf{Projenin Amacý}
 \end{center} 
- \mbox{}\dotfill\\
-  \mbox{}\dotfill
+ \mbox{Bu projenin amacý Multiplo robot kullanarak uygulamalar geçekleþtirmesi}\\
+ 
 
 \begin{center}
 \textbf{Projenin Kapsamý}
 \end{center}
- \mbox{}\dotfill\\
-  \mbox{}\dotfill
+ \mbox{Bu projenin kapsamýnda uzaktan deneteleyebilen ve mesafe ölçen bir robot gerçekleþtirmesi }\\
 
 \begin{center}
 \textbf{Sonuçlar}
 \end{center}
- \mbox{}\dotfill\\
- \mbox{}\dotfill
+ \mbox{}\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ABSTRACT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \centerline{\bf ABSTRACT}
@@ -25,15 +23,15 @@
 \textbf{Project Objective}
 \end{center}
 
- \mbox{}\dotfill\\
-  \mbox{}\dotfill
+ \mbox{The objective of this project is to implement applications using Multiplo robot.}\\
+ 
 %Bilecik Þeyh Edebali University Department of Computer Engineering students is studied. The aim of project is work to create a template for writing \LaTeX\ writing the final report template in the Project, to be written.
 
 \begin{center}
 \textbf{Scope of Project}
 \end{center}
- \mbox{}\dotfill\\
-  \mbox{}\dotfill
+ \mbox{Within the scope of this project, a robot that can remotely control and measure distance has  }\\
+ \mbox{been realized.}
 %Bilecik Þeyh Edebali University Computer Engineering Department Bilecik need to create a project template Latex codes assignment, involves the use of. The first part of the project consists of two parts, \LaTeX's development have been studied and why it is preferred that the use of information provided in the information. Faculty of Engineering of the university for the second part, Sheikh Edebali Bilecik Project Paper \LaTeX\ codes and are included.
 
 \begin{center}
