--- a/14kaynaklar.tex
+++ b/14kaynaklar.tex
@@ -2,6 +2,12 @@
 \addcontentsline{toc}{section}{KAYNAKLAR}
 \begin{thebibliography}{99}%kaynak ortamý oluþturmak için
 %%%%Kaynak Web sayfasýndan alýnmýþ ise%%%%%%%%%%%%%%%%%
-\bibitem{k:1} Wikipedia, \url{https://en.wikipedia.org/wiki/Multiplo} [Ziyaret Tarihi:  Temmuz 2012]
-\bibitem{k:2} miniBloq, \url{http://blog.minibloq.org/p/documentation.html}[Ziyaret Tarihi:  Aralýk 2021]. 
+\bibitem{multiplo} 
+	Anonim, Wikipedia, 
+	\url{https://en.wikipedia.org/wiki/Multiplo},
+	 [Ziyaret Tarihi: 23  Aralýk 2021].
+\bibitem{miniBloq} 
+Anonim, miniBloq, 
+	\url{http://blog.minibloq.org/p/documentation.html}
+	[Ziyaret Tarihi: 27  Aralýk 2021]. 
 \end{thebibliography}
