--- a/15ozgecmis.tex
+++ b/15ozgecmis.tex
@@ -5,10 +5,10 @@
 \renewcommand{\arraystretch}{1.5}
 \begin{tabular}{l@{\bf :}l}
 \multicolumn{2}{l}{\underline{\bf KÝÞÝSEL BÝLGÝLER}}\cr
-\textbf{Adý Soyadý}&   IBRAHIM KHALIL ATTEIB YACOUB  \cr
+\textbf{Adý Soyadý} &IBRAHIM KHALIL ATTEIB YACOUB  \cr
 \textbf{Uyruðu}&\; ÇAD \cr
 \textbf{Doðum Yeri ve Tarihi}&\;    03.03.1998\cr
-\textbf{Adres}&\;   Bilecik/Türkiye   \cr
+\textbf{Adres}&\; Cumhuriyet Mah. Atatürk Bul. No:70 D:13 Bilecik/Merkez Türkiye   \cr
 \multicolumn{1}{l}{}&      \cr
 \textbf{Telefon}&\;  5433044170   \cr
 \textbf{e-mail}&\; ibrahimalkhalilatteib@gmail.com  \cr
@@ -16,16 +16,16 @@
 \multicolumn{2}{l}{\underline{\bf EÐÝTÝM DURUMU}}\cr
 \textbf{Lisans Öðrenimi}&\; BÞEÜ Bilgisayar Mühendisliði Bölümü\cr
 \textbf{Bitirme Yýlý}&\;  2023  \cr
-\textbf{Lise}& \; Kuveyt merkez lisesi   \cr
+\textbf{Lise}& \; Kuveyt Merkez Lisesi - Encemine/ÇAD \cr
 \multicolumn{1}{l}{}&\cr
 \multicolumn{2}{l}{\underline{\bf ÝÞ DENEYÝMLERÝ}}\cr
 \textbf{Yýl}&\;  -   \cr
 \textbf{Kurum}& \;  -  \cr
 \textbf{Stajlar}&\;  -   \cr
 \multicolumn{1}{l}{}&\cr
-\multicolumn{2}{l}{\underline{\bf ÝLGÝ ALANLARI:}}Yapay Zeka, Web Uygulama (Laravel)\cr
+\multicolumn{2}{l}{\underline{\bf ÝLGÝ ALANLARI:}}Yapay Zeka, Web Uygulama : PHP Laravel, Vue.js\cr
 \multicolumn{1}{l}{}&\cr
-\multicolumn{2}{l}{\underline{\bf YABANCI DÝLLER:}}Fransizca, Arapça, Ýngilizce(baþlangýç)\cr
+\multicolumn{2}{l}{\underline{\bf YABANCI DÝLLER:}}Fransizca (C2), Arapça(C1), Ýngilizce(A2)\cr
 \multicolumn{1}{l}{}&\cr
 
 
