--- a/2ickapak.tex
+++ b/2ickapak.tex
@@ -16,7 +16,7 @@
 
 \vspace*{4cm}%bir miktar boþluk býrakmak için
 \begin{center}
-\textbf{UZAKTAN DENETLEYEBÝLEN VE MESAFE ÖLÇEN BÝR ROBOT GERÇEKLEÞTIRMESÝ}
+\textbf{UZAKTAN DENETLENEBÝLEN VE MESAFE ÖLÇEN BÝR ROBOT GERÇEKLEÞTIRMESÝ}
 
 \textbf{IBRAHIM KHALIL ATTEIB YACOUB}
 
