--- a/3ozetabstract.tex
+++ b/3ozetabstract.tex
@@ -14,7 +14,8 @@
 \begin{center}
 \textbf{Sonuçlar}
 \end{center}
- \mbox{}\\
+ \mbox{Bu projede de aracýmýz hareket halinde iken engelle karþýlaþmasý anýnda istenilen mesafede}
+ \mbox{durmasý saðlanmýþtýr.  Ýstenilen özelliklerden biri de robotik aracýn kumanda ile kontrol edilmesi} \mbox{gerçekleþtirilmiþtir.    }\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ABSTRACT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \centerline{\bf ABSTRACT}
@@ -37,7 +38,8 @@
 \begin{center}
 \textbf{Results}
 \end{center}
- \mbox{}\dotfill\\
-  \mbox{}\dotfill
+ \mbox{In this project, while our vehicle is in motion, it is ensured that it stops at the desired distance }\\
+  \mbox{when it encounters an obstacle. One of the desired features is the control of the robotic vehicle}
+  \mbox{with the remote control.}
 %As a result, Bilecik Sheikh Edebali University Computer Engineering
 %Department prepared a document that students can build project reports into \LaTeX. 
