--- a/9giris.tex
+++ b/9giris.tex
@@ -1,12 +1,9 @@
 \section{GÝRÝÞ}
-Bir robot inþa etmek, baþka bir þey inþa etmek gibidir. Sadece bir fikriniz olmasý gerekiyor
-hayal gücünüzden ve onu inþa etme cesaretinizden. Ve tabii ki sabýr. Ama iþler çok
-standart bir yapým yönteminiz yoksa daha zor. Bu yüzden Multiplo'yu geliþtiriyoruz
-farklý disiplinlerin bir entegrasyonu olarak, böylece hiçbir zorluk çekmezsiniz.
-mekanik veya elektronik ile. Ve böylece, yaratma sürecine odaklanabilirsiniz.
+Robotlarýn hayatýmýzdaký yeri giderek artýyor monoton, zorlu ve riskli iþleri yerine getirilmesi için robotlar geliþtiriliyor. Robotlarýn bu geliþmeleri saðlýk, eðitim, bilim alanlarýnda kendine göstermektedir.
 
-bu konseptten yola çýkarak bu projede iki uygulamayý gerçekleþtirmeye çalýþacaðýz.
-Bu uygulamalar öðrencilerin temel bir robotik kavramýna sahip olmalarýný saðlar.
+Robotlarýn üretilmesi yüksek fizik bilgisi gerekmektedir. Mühendisler robotlarý üretmek için müþterek çalýþmalar yapmaktadýr. Robotlar üretildikten sonra kullanýmlarý basit ve az zamanda çok iþler yapan makineler olarak herkes tarafýndan tercih edilmektedir. 
 
-Ýlk uygulamamýza \textbf{Kumanda ile hareket ettirmek}, ikinci ise \textbf{Engel algýlmak}.\\
+Bu proje yukarýdaki deðenilen konularý göz önunde bulundurularak ihtiyaç yerlere integre edilebilecek mesafe ölçan ve uzaktan kumanda ile kontrol edilebilecek robot geliþtirmiþtir
+
+Ýlk uygulamamýza \textbf{Kumanda ile hareket ettirmek}, ikincisine ise \textbf{Engel algýlmak} adý verilmiþtir.\\
 Çalýþmalarýmýzý basit açýklamalar, algoritmalar ve adým adým gösteren resimlerle destekleyeceðiz, böylece kolay ve anlaþýlýr olacaktýr.
