--- a/12sonuclar.tex
+++ b/12sonuclar.tex
@@ -1,29 +1,24 @@
-\begin{figure}[h!]
-     \centering
-     \begin{subfigure}[b]{0.3\textwidth}
-         \centering
-         \includegraphics[width=\textwidth]{robot}
-         \caption*{ Robot}
-         \label{fig:robot}
-     \end{subfigure}
-     \hfill
-     \begin{subfigure}[b]{0.3\textwidth}
-         \centering
-         \includegraphics[width=\textwidth]{jumper}
-         \caption*{ 4 Adet Erkek-Diþi Jumper}
-         \label{fig:kumanda}
-     \end{subfigure}
-     \hfill
-     \begin{subfigure}[b]{0.3\textwidth}
-         \centering
-         \includegraphics[width=\textwidth]{sens}
-         \caption*{ Kablo}
-         \label{fig:cable}
-     \end{subfigure}
-      \caption{Ýkinci uygulamada kullandýðýmýz malzemeler}
-\end{figure}
-
 \section{SONUÇLAR VE ÖNERÝLER}
-Günümüzde robotik sektörü büyük bir hýzla büyüyor. Bu nedenle bu projenin önemi, öðrencileri bu sektöre temel bilgilerle tanýþtýrarak bu sektörde güncel olabilmelerini saðlamaktýr.
+Sonuç olarak robotlarýn hayatýmýzdaký önemi ve kolaylýðý göz önünde bulundurularak bir proje geliþtirilmiþtir. 
+Yapýlan robotlarýn ilk amacý mesafe ölçen sensörler sayesinde engllere çarpmadan ortamda gezinmesi ve uzaktan kumandayla kontrol edilmesidir. 
 
-Bu projede yaptýðýmýz uygulamalar çok esnektir ve öðrencilere deðiþiklik yapma esnekliði verir ve istedikleri algoritmayý uygulayabilirler.
+Bu projenin esnekliði sayesinde ilerleyen aþamalarda ihtiyaç duyulan entegre edilebilmesidir.
+
+Robot resmini Sayfa 16'ya Þekil \ref{fig:arac_kul_2}'da gösterilmiþtir. 
+
+ \begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.2]{arac_2}
+    \caption{Projede kullanýlan Multiplo araç kiti}
+    \label{fig:arac_kul_2}
+ \end{figure}
+
+
+Bu projede gerçekleþtirdiðimiz uygulamarlar video linkleri\\
+Kumanda ile hareket ettirmek: \url{https://youtu.be/oNlTBjNFmu4}\\
+Engel algýlmak: \url{https://youtu.be/eq6jHHT1qb0}
+
+
+
+
+ 
