--- a/12sonuclar.tex
+++ b/12sonuclar.tex
@@ -15,7 +15,7 @@ Robot resmini Sayfa 16'ya Þekil \ref{fig:arac_kul_2}'da gösterilmiþtir.
 
 
 Bu projede gerçekleþtirdiðimiz uygulamarlar video linkleri\\
-Kumanda ile hareket ettirmek: \url{https://youtu.be/oNlTBjNFmu4}\\
+Kumanda ile hareket ettirmek: \url{https://youtu.be/oysrP-Nnc1M}\\
 Engel algýlmak: \url{https://youtu.be/eq6jHHT1qb0}
 
 
